--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,7 +8,15 @@
 /* primary styles */
 
 .btn-primary {
-  background-color: rgb(255, 115, 64);
+  background-color: #fd6e0a;
+  border: none;
+  color: white;
+  padding: 20px 30px 20px 30px;
+  border-radius: 5px;
+  font-size: 20px;
+}
+.btn-primary:hover {
+  background-color: #e07c34;
   border: none;
   color: white;
   padding: 20px 30px 20px 30px;
@@ -18,7 +26,9 @@
 
 /* header related styles */
 
-
+header {
+  background-color: #d9d9d9;
+}
 
 .navbar {
   display: flex;
@@ -34,14 +44,14 @@ nav > ul {
   gap: 50px;
 }
 
-nav > ul > li > a{
+nav > ul > li > a {
   text-decoration: none;
-    color: gray;
-    font-size: 20px;
+  color: gray;
+  font-size: 20px;
 }
 
-nav > ul > li{
-    list-style: none;
+nav > ul > li {
+  list-style: none;
 }
 
 .dev-name {
@@ -51,3 +61,51 @@ nav > ul > li{
 h2 {
   font-size: 45px;
 }
+
+.hed-section {
+  padding: 20px 70px 70px;
+  /* background-image: url("/images/header_bg.png");
+  background-repeat: no-repeat;
+  background-size: 650px; */
+  /* background-position: right; */
+  display: flex;
+  justify-content: space-between;
+  gap: 100px;
+}
+
+.hed-section > div > div > h2,
+p {
+  color: #474747;
+}
+
+.hed-section > div > div > h2 {
+  color: #474747;
+  font-size: 45px;
+}
+
+.hed-section > div > div > h1 {
+  font-size: 85px;
+}
+
+.hed-section > div > div > p {
+  color: #474747;
+  font-size: 18px;
+}
+
+.btn-contact {
+  color: #fd6e0a;
+  border: #fd6e0a 1px solid;
+  padding: 20px 30px 20px 30px;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+.btn-contact:hover {
+  background-color: #e07c34;
+  border: none;
+  color: white;
+  padding: 20px 30px 20px 30px;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
