--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -115,3 +115,21 @@ p {
   font-size: 20px;
 }
 
+/* About me section related styles */
+
+.about-me > h3{
+  font-size: 35px;
+  text-align: center;
+}
+
+.my-info{
+  display: flex;
+  align-self: center;
+  justify-content: space-evenly;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.my-info-span{
+  color: black;
+}
