--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -169,58 +169,56 @@ p {
   text-align: center;
 }
 
-.my-resume{
+.my-resume {
   margin-top: 110px;
   display: flex;
   justify-content: space-evenly;
-  
 }
 
-.my-resume > h3{
+.my-resume > h3 {
   font-size: 25px;
   color: #474747;
 }
 
-.my-resume > div{
+.my-resume > div {
   margin-bottom: 30px;
 }
 
-.resume-edu{
+.resume-edu {
   margin-bottom: 60px;
 }
 
 /* footer related styles */
 
-.footer{
+.footer {
   margin-top: 250px;
   display: flex;
   justify-content: space-evenly;
 }
 
-.connect > h3{
+.connect > h3 {
   margin-bottom: 30px;
 }
 
-.connect-icons{
+.connect-icons {
   margin-top: 30px;
   display: flex;
   width: 200px;
   gap: 30px;
-  
 }
 
-.msg-me-heading{
+.msg-me-heading {
   font-size: 35px;
 }
 
-.input-msg-me{
+.input-msg-me {
   border: none;
   padding: 18px 150px 18px 30px;
   font-size: 16px;
   color: #757575;
 }
 
-.footer-main{
+.footer-main {
   margin-top: 250px;
   background-color: #757575;
   color: azure;
@@ -230,6 +228,94 @@ p {
   padding: 100px;
 }
 
-.address-name{
+.address-name {
   color: darkgoldenrod;
+}
+
+/* small devices */
+
+@media screen and (max-width: 576px) {
+  body {
+    padding: 10px;
+  }
+  .navbar {
+    display: flex;
+    flex-direction: column;
+  }
+  nav > ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .hed-section > div > div > h2 {
+    color: #474747;
+    font-size: 35px;
+    margin-top: 5px;
+  }
+  .hed-section > div > div > h1 {
+    font-size: 60px;
+  }
+  .hed-section {
+    /* padding: 20px 70px 70px; */
+    background-image: none;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .hed-img{
+    width: 250px;
+  }
+  .btn-contact {
+    color: #fd6e0a;
+    border: #fd6e0a 1px solid;
+    padding: 20px 30px 20px 30px;
+    border-radius: 5px;
+    font-size: 20px;
+    margin-top: 10px;
+  }
+  .my-info {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: space-evenly;
+    text-align: center;
+    margin-top: 30px;
+  }
+  .whatIdo {
+    margin-top: 100px;
+  }
+  .whtIdo-info {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 20px;
+    text-align: center;
+  }
+  .resume {
+    margin-top: 100px;
+  }
+  .my-resume {
+    margin-top: 110px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .footer {
+    margin-top: 250px;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-evenly;
+  }
+  .footer-main {
+    margin-top: 250px;
+    background-color: #757575;
+    color: azure;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 100px;
+  }
 }
